[gd_scene load_steps=11 format=3 uid="uid://cwlrovd240rt2"]

[ext_resource type="Script" uid="uid://dn7rm61wq3t3s" path="res://addons/godot_projectile_engine/core/projectile_environment/projectile_environment.gd" id="1_06o2x"]
[ext_resource type="Script" uid="uid://cnqgcej10tinn" path="res://addons/godot_projectile_engine/core/projectile_spawner/projectile_spawner.gd" id="2_fe1hk"]
[ext_resource type="Script" uid="uid://dqlixqba72p5f" path="res://addons/godot_projectile_engine/core/projectile_template/projectile_template_simple_2d/projectile_template_simple_2d.gd" id="3_7j3qm"]
[ext_resource type="Texture2D" uid="uid://xej5ti53m73n" path="res://addons/godot_projectile_engine/examples/assets/projectile/projectile_circle_1.png" id="4_716l7"]
[ext_resource type="Script" uid="uid://bc73oiea731jc" path="res://addons/godot_projectile_engine/core/pattern_composer/pattern_composer.gd" id="5_hutb3"]
[ext_resource type="Script" uid="uid://co24jiat0y46s" path="res://addons/godot_projectile_engine/core/pattern_composer/projectile_pattern_composer/PCCSingle2D.gd" id="6_fcbgv"]
[ext_resource type="Script" uid="uid://b8nclaklcf4uu" path="res://addons/godot_projectile_engine/core/timing_scheduler/timing_scheduler.gd" id="7_m0517"]
[ext_resource type="Script" uid="uid://sjpvs4m6jk71" path="res://addons/godot_projectile_engine/core/timing_scheduler/timing_scheduler_component/tsc_repeater.gd" id="8_1kks5"]
[ext_resource type="AudioStream" uid="uid://b7ka75wcwrtcq" path="res://addons/godot_projectile_engine/examples/assets/audio/laserShoot.wav" id="9_8rnjn"]

[sub_resource type="Resource" id="Resource_nfr7l"]
script = ExtResource("3_7j3qm")
speed = 100.0
projectile_pooling_amount = 500
texture = ExtResource("4_716l7")
scale = Vector2(1, 1)
rotation = 0.0
skew = 0.0
texture_visible = true
texture_z_index = 0
texture_modulate = Color(1, 1, 1, 1)
collision_layer = 0
collision_mask = 0
texture_rotate_direction = false
destroy_on_body_collide = true
destroy_on_area_collide = true
life_time_second_max = 10.0
life_distance_max = 1000.0
custom_data = []
metadata/_custom_type_script = "uid://dqlixqba72p5f"

[node name="Example1FirstProjectile2" type="Node2D"]

[node name="ProjectileEnvironment2D" type="Node2D" parent="."]
script = ExtResource("1_06o2x")
metadata/_custom_type_script = "uid://dn7rm61wq3t3s"

[node name="Camera2D" type="Camera2D" parent="."]

[node name="ProjectileSpawner2D" type="Node2D" parent="." node_paths=PackedStringArray("timing_scheduler", "audio_stream")]
script = ExtResource("2_fe1hk")
projectile_composer_name = "pattern_single_1"
projectile_template_2d = SubResource("Resource_nfr7l")
timing_scheduler = NodePath("../TimingScheduler")
audio_stream = NodePath("../AudioStreamPlayer")
metadata/_custom_type_script = "uid://cnqgcej10tinn"

[node name="PatternComposer2D" type="Node" parent="."]
script = ExtResource("5_hutb3")
composer_name = "pattern_single_1"
metadata/_custom_type_script = "uid://bc73oiea731jc"

[node name="PCCSingle2D" type="Node" parent="PatternComposer2D"]
script = ExtResource("6_fcbgv")
metadata/_custom_type_script = "uid://co24jiat0y46s"

[node name="TimingScheduler" type="Node" parent="."]
script = ExtResource("7_m0517")
metadata/_custom_type_script = "uid://b8nclaklcf4uu"

[node name="TSCRepeater" type="Node" parent="TimingScheduler"]
script = ExtResource("8_1kks5")
metadata/_custom_type_script = "uid://sjpvs4m6jk71"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_8rnjn")
